Overflow fix for scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ img {
 
 body {
   background-color: rgb(31, 31, 31);
+  overflow: auto;
 }
 
 
